@startuml
' MLD - vocabulaire relationnel

entity "realisateur" as t_realisateur {
  * id_realisateur : PK
  --
  nom
}

entity "film" as t_film {
  * id_film : PK
  --
  titre
  annee_sortie
  synopsis
  id_realisateur : FK
}

entity "genre" as t_genre {
  * id_genre : PK
  --
  libelle
}

entity "film_genre" as t_film_genre {
  * id_film : PK, FK
  * id_genre : PK, FK
}

entity "utilisateur" as t_utilisateur {
  * id_utilisateur : PK
  --
  pseudo
}

entity "avis" as t_avis {
  * id_avis : PK
  --
  note
  commentaire
  id_film : FK
  id_utilisateur : FK
}

t_realisateur ||--o{ t_film : 1,n
t_film ||--o{ t_avis : 1,n
t_utilisateur ||--o{ t_avis : 1,n
t_film ||--o{ t_film_genre : n,n
t_genre ||--o{ t_film_genre : n,n

@enduml
